@@ -79,8 +79,8 @@ IDR_ICON_MAIN           ICON                    "res\\RAGen.ico"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,2,0,150
- PRODUCTVERSION 1,2,0,150
+ FILEVERSION 1,2,0,152
+ PRODUCTVERSION 1,2,0,152
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x21L
@@ -97,12 +97,12 @@ BEGIN
         BEGIN
             VALUE "Comments", "Generates settings and information for use with the ReefAngel controller."
             VALUE "FileDescription", "ReefAngel Generator Application"
-            VALUE "FileVersion", "1, 2, 0, 150"
+            VALUE "FileVersion", "1, 2, 0, 152"
             VALUE "InternalName", "RAGen.exe"
             VALUE "LegalCopyright", "(c) 2010-12 Curt Binder.  All rights reserved."
             VALUE "OriginalFilename", "RAGen.exe"
             VALUE "ProductName", "ReefAngel Generator"
-            VALUE "ProductVersion", "1, 2, 0, 150"
+            VALUE "ProductVersion", "1, 2, 0, 152"
             VALUE "SpecialBuild", "Static build"
         END
     END
@@ -386,7 +386,19 @@ BEGIN
     END
 END
 
-IDR_MENU_PDE_RESET MENU 
+IDR_MENU_CONTROLLER_RESET MENU
+BEGIN
+    POPUP ""
+    BEGIN
+        MENUITEM "All / Defaults",              ID_RESET_ALL
+        MENUITEM "Saved Values",                ID_RESET_SAVED
+		MENUITEM SEPARATOR
+        MENUITEM "Temperature",                 ID_RESET_TEMPERATURE
+        MENUITEM "Portal",				        ID_RESET_LOGGING
+    END
+END
+
+IDR_MENU_RELAY_RESET MENU 
 BEGIN
     POPUP ""
     BEGIN
@@ -394,9 +406,6 @@ BEGIN
         MENUITEM "Saved Values",                ID_RESET_SAVED
         MENUITEM SEPARATOR
         MENUITEM "Ports",                       ID_RESET_PORTS
-        MENUITEM "Temperature",                 ID_RESET_TEMPERATURE
-        MENUITEM "Logging",                     ID_RESET_LOGGING
-        MENUITEM SEPARATOR
         MENUITEM "Feeding Mode",                ID_RESET_FEEDINGMODE
         MENUITEM "Water Change Mode",           ID_RESET_WATERCHANGEMODE
         MENUITEM "Overheat",                    ID_RESET_OVERHEAT
@@ -922,6 +931,7 @@ STRINGTABLE
 BEGIN
     IDS_CONTROLLER_TIPS     "Some tips for configuring your controller and using this app.\n\n1. Controller Tab - Contains some general configuration choices about the controller.  The wifi feature can also be changed on the Features tab.  Your choices are saved once you make them on this screen.\n\n2. Features Tab - Contains all the features that can be enabled on the controller.  Read the descriptions carefully.  You can save your changes and have the Features file update immediately.  Otherwise, it gets saved and updated when the controller code is generated.\n\n3. Main Relay Tab - Configures the relay ports for the main relay.  Once configured, click the Generate button to create the code file to be uploaded to the controller."
     IDS_PORTAL              "Portal"
+    IDS_WAVEMAKER_PORTS     "Wavemakers are designed to be on Ports 5 or 6"
 END
 
 STRINGTABLE 
@@ -997,14 +1007,13 @@ BEGIN
     IDS_INO_EXTENSION       ".ino"
     IDS_NO_UNKNOWN_FEATURES "No unknown Features."
     IDS_UNKNOWN_FEATURES    "Additional unrecognized features found:\n\n%s"
-	IDS_WAVEMAKER_PORTS		"Wavemakers are designed to be on Ports 5 or 6"
     IDS_CONTROLLER_TAB      "Controller"
 END
 
 STRINGTABLE 
 BEGIN
     IDS_FEATURES_TAB        "Features"
-    IDS_PDE_TAB             "Main Relay"
+    IDS_MAIN_RELAY_TAB      "Main Relay"
     IDS_COLORS_TAB          "Colors"
     IDS_MEMORY_TAB          "Internal Memory"
     IDS_STD_TAB             "Standard Libraries"
