@@ -28,3 +28,4 @@ TODO File
 - allow for multiple wavemakers & dosing pumps 
 - create a Load / Save file for an xml file that contains all settings
 - Add PWM tab that allows for selection of what PWM slope function to use
+- Test saving all values - controller tab (portal, expansion relays, temperature, pwmslope)
