@@ -21,13 +21,14 @@
 #define IDR_ICON_MAIN                   128
 #define IDR_MENU_MAIN                   129
 #define IDR_MENU_RESET                  130
-#define IDR_MENU_PDE_RESET              131
-#define IDS_FEATURES_TAB                132
-#define IDS_PDE_TAB                     133
-#define IDS_COLORS_TAB                  134
-#define IDS_MEMORY_TAB                  135
-#define IDS_STD_TAB                     136
-#define IDS_SUCCESS_GENERATE            137
+#define IDR_MENU_RELAY_RESET            131
+#define IDR_MENU_CONTROLLER_RESET		132
+#define IDS_FEATURES_TAB                133
+#define IDS_MAIN_RELAY_TAB              134
+#define IDS_COLORS_TAB                  135
+#define IDS_MEMORY_TAB                  136
+#define IDS_STD_TAB                     137
+#define IDS_SUCCESS_GENERATE            138
 #define IDS_SUCCESS_COLORS              140
 #define IDS_REGISTRY_CB                 142
 #define IDS_REGISTRY_RA                 143
